--- a/Lab7/package.json
+++ b/Lab7/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^5.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
